Added flirts(likes) functionality

--- a/DateFirst.Web/Templates/userProfile.html
+++ b/DateFirst.Web/Templates/userProfile.html
@@ -11,6 +11,10 @@
         <div class="card-info">
             <span class="card-title">{{this.FirstName}} {{this.LastName}}</span>
         </div>
+        <button type="button" id="flirts" class="btn btn-info btn-lg col-md-2" data-type="like">
+            <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Flirt
+                <strong id="count">{{this.Flirts}}</strong>
+        </button>
     </div>
     <div class="btn-pref btn-group btn-group-justified btn-group-lg" id="btn-container" role="group" aria-label="...">
         <div class="btn-group" role="group">
