--- a/DateFirst.Web/Templates/userProfile.html
+++ b/DateFirst.Web/Templates/userProfile.html
@@ -2,31 +2,34 @@
     <!--class="col-lg-12 col-sm-6"-->
     <div class="card hovercard">
         <div class="card-background">
-            <img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
-            <!-- http://lorempixel.com/850/280/people/9/ -->
+            <button type="button" id="flirts" class="btn btn-info btn-lg col-md-2" data-type="like">
+                <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Flirt
+                <strong id="count">{{this.Flirts}}</strong>
+            </button>
         </div>
         <div class="useravatar">
             <img alt="" src="http://lorempixel.com/100/100/cats/2">
         </div>
+
         <div class="card-info">
             <span class="card-title">{{this.FirstName}} {{this.LastName}}</span>
         </div>
     </div>
     <div class="btn-pref btn-group btn-group-justified btn-group-lg" id="btn-container" role="group" aria-label="...">
         <div class="btn-group" role="group">
-            <button type="button" id="btn-bio" class="btn btn-primary" href="#user-info" data-toggle="tab">
+            <button type="button" id="btn-bio" class="btn btn-user-profile" href="#user-info" data-toggle="tab">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                 <div class="hidden-xs">Information</div>
             </button>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="btn-gallery" class="btn btn-default" href="#image-gallery" data-toggle="tab">
+            <button type="button" id="btn-gallery" class="btn btn-user-profile" href="#image-gallery" data-toggle="tab">
                 <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
                 <div class="hidden-xs">Gallery</div>
             </button>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="btn-comments" class="btn btn-default" href="#comments" data-toggle="tab">
+            <button type="button" id="btn-comments" class="btn btn-user-profile" href="#comments" data-toggle="tab">
                 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
                 <div class="hidden-xs">Comments</div>
             </button>
@@ -92,7 +95,17 @@
                 </div>
             </div>
             <div class="tab-pane fade in" id="comments">
-                <h1>Comments</h1>
+                <div class="tab-pane fade in" id="comments">
+                    <div id="comments-container">
+                        <ul>
+                            {{#each this.Posts}}
+                            <li>{{SenderName}} - {{CreatedOn}} - {{Content}}</li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                    <textarea id="ta-post-content"></textarea>
+                    <button id="btn-add-post">Add Comment</button>
+                </div>
             </div>
         </div>
     </div>
