--- a/DateFirst.Web/Templates/users.html
+++ b/DateFirst.Web/Templates/users.html
@@ -1,5 +1,4 @@
-﻿<h1>All Users Page</h1>
-<div id="users-container">
+﻿<div id="users-container">
     <ul>
         {{#each this}}
         <li><a href="#/users/{{Id}}">{{FirstName}} {{LastName}}</a></li>
