--- a/DateFirst.Web/Content/CustomCss/style.css
+++ b/DateFirst.Web/Content/CustomCss/style.css
@@ -35,21 +35,73 @@ a:hover {
     height: 150px;
 }
 
-.well {
-    height: 360px;
-    background: white;
-}
-
 #content {
     /*border-right: 1px solid #8AB933;
     border-left: 1px solid #8AB933;*/
 }
 
+#search-container {
+    float: left;
+    width: 33.33333%;
+}
+
+    #search-container .panel {
+        margin-top: 10px;
+        margin-bottom: 0px;
+        padding: 0px;
+        border-color: #8AB933;
+        width: 95%;
+        height: 50%;
+    }
+
+        #search-container .panel .panel-heading {
+            color: white;
+            background-color: #8AB933;
+        }
+
+        #search-container .panel .panel-body div {
+            color: black;
+            margin-bottom: 10px;
+            margin-left: 30px;
+        }
+
+        #search-container .panel .panel-body button {
+            background-color: white;
+            color: black;
+            margin-top: 30px;
+            margin-left: 200px;
+            font-size: 17px;
+        }
+
+        #search-container .panel .panel-body div select {
+            border: 1px solid #111;
+            background: transparent;
+            padding: 5px 35px 5px 5px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            height: 34px;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background: url("../favicon.ico") 92% / 10% no-repeat white;
+        }
+
+
 #users-container .panel {
     margin-top: 10px;
     margin-bottom: 0px;
     padding: 0px;
+    border-color: #8AB933;
 }
+
+    #users-container .panel a {
+        font-size: 14px;
+        color: #8AB933;
+    }
+
+    #users-container .panel .panel-heading {
+        color: white;
+        background-color: #8AB933;
+    }
 
     #users-container .panel ul {
         padding-left: 0px;
@@ -59,6 +111,42 @@ a:hover {
         #users-container .panel ul li {
             list-style-type: none;
             display: inline-block;
+            color: #8AB933;
+        }
+
+            #users-container .panel ul li a {
+                color: #8AB933;
+            }
+
+.well {
+    height: 360px;
+    background: white;
+}
+
+    .well .tab-content .tab-pane div {
+        color: black;
+        margin-bottom: 25px;
+        margin-left: 30px;
+        font-size: 18px;
+    }
+
+    .well .tab-content .tab-pane #info-1 {
+        float: left;
+    }
+
+    .well .tab-content .tab-pane #info-2 {
+        float: right;
+    }
+
+        .well .tab-content .tab-pane #info-2 #about-me-header {
+            margin-bottom: 2px;
+        }
+
+        .well .tab-content .tab-pane #info-2 #about-me-content {
+            width: 450px;
+            height: 150px;
+            overflow: auto;
+            border: 1px solid black;
         }
 
 .btn-user-profile {
