--- a/DateFirst.Web/Templates/editProfile.html
+++ b/DateFirst.Web/Templates/editProfile.html
@@ -2,31 +2,34 @@
     <!--class="col-lg-12 col-sm-6"-->
     <div class="card hovercard">
         <div class="card-background">
-            <img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
-            <!-- http://lorempixel.com/850/280/people/9/ -->
+            <button type="button" id="flirts" class="btn btn-info btn-lg col-md-2" data-type="like" disabled>
+                <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Flirt
+                <strong id="count">{{this.Flirts}}</strong>
+            </button>
         </div>
         <div class="useravatar">
             <img alt="" src="http://lorempixel.com/100/100/cats/2">
         </div>
+
         <div class="card-info">
             <span class="card-title">{{this.FirstName}} {{this.LastName}}</span>
         </div>
     </div>
     <div class="btn-pref btn-group btn-group-justified btn-group-lg" id="btn-container" role="group" aria-label="...">
         <div class="btn-group" role="group">
-            <button type="button" id="btn-bio" class="btn btn-primary" href="#user-info" data-toggle="tab">
+            <button type="button" id="btn-bio" class="btn btn-user-profile" href="#user-info" data-toggle="tab">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                 <div class="hidden-xs">Information</div>
             </button>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="btn-gallery" class="btn btn-default" href="#image-gallery" data-toggle="tab">
+            <button type="button" id="btn-gallery" class="btn btn-user-profile" href="#image-gallery" data-toggle="tab">
                 <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
                 <div class="hidden-xs">Gallery</div>
             </button>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="btn-comments" class="btn btn-default" href="#comments" data-toggle="tab">
+            <button type="button" id="btn-comments" class="btn btn-user-profile" href="#comments" data-toggle="tab">
                 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
                 <div class="hidden-xs">Comments</div>
             </button>
@@ -36,16 +39,21 @@
     <div class="well">
         <div class="tab-content">
             <div class="tab-pane fade in active" id="user-info">
-                <div>Gender: 
-                    <select id="select-gender" class="selectpicker">
-                        <option value="3">Nothing Selected</option>
-                        <option value="0">Male</option>
-                        <option value="1">Female</option>
-                        <option value="2">Other</option>
-                    </select>
-                </div>
-                <div>
-                    Eye Color:
+                <div id="info-1">
+                    <div>
+                        Gender:
+                        <select id="select-gender" class="selectpicker">
+                            <option value="3">Nothing Selected</option>
+                            <option value="0">Male</option>
+                            <option value="1">Female</option>
+                            <option value="2">Other</option>
+                        </select>
+                    </div>
+                    <div>Age: <input id="tb-age" type="text" /></div>
+                    <div>Height: <input id="tb-height" type="text" /></div>
+                    <div>Weight: <input id="tb-weight" type="text" /></div>
+                    <div>
+                        Eye Color:
                         <select id="select-eye-color" class="selectpicker">
                             <option value="6">Nothing Selected</option>
                             <option value="0">Albino</option>
@@ -55,77 +63,71 @@
                             <option value="4">Hazel</option>
                             <option value="5">Grey</option>
                         </select>
+                    </div>
+                    <div>
+                        Hair Color:
+                        <select id="select-hair-color" class="selectpicker">
+                            <option value="8">Nothing Selected</option>
+                            <option value="0">Blonde</option>
+                            <option value="1">Brown</option>
+                            <option value="2">Red</option>
+                            <option value="3">Ginger</option>
+                            <option value="4">Black</option>
+                            <option value="5">Grey</option>
+                            <option value="6">Colored</option>
+                            <option value="7">Albino</option>
+                        </select>
+                    </div>
+                    <div>
+                        Star Sign:
+                        <select id="select-star-sign" class="selectpicker">
+                            <option value="12">Nothing Selected</option>
+                            <option value="0">Aries</option>
+                            <option value="1">Taurus</option>
+                            <option value="2">Gemini</option>
+                            <option value="3">Cancer</option>
+                            <option value="4">Leo</option>
+                            <option value="5">Virgo</option>
+                            <option value="6">Libra</option>
+                            <option value="7">Scorpio</option>
+                            <option value="8">Sagittarius</option>
+                            <option value="9">Capricorn</option>
+                            <option value="10">Aquarius</option>
+                            <option value="11">Pisces</option>
+                        </select>
+                    </div>
                 </div>
-                <div>
-                    Hair Color:
-                    <select id="select-hair-color" class="selectpicker">
-                        <option value="8">Nothing Selected</option>
-                        <option value="0">Blonde</option>
-                        <option value="1">Brown</option>
-                        <option value="2">Red</option>
-                        <option value="3">Ginger</option>
-                        <option value="4">Black</option>
-                        <option value="5">Grey</option>
-                        <option value="6">Colored</option>
-                        <option value="7">Albino</option>
-                    </select>
+                <div id="info-2">
+                    <div>Job Title: <input id="tb-job-title" type="text" /></div>
+                    <div>Salary: <input id="tb-salary" type="text" /></div>
+                    <div>Hobbies: <input id="tb-hobbies" type="text" /></div>
+                    <div id="about-me-header">About me: </div>
+                    <div><textarea id="ta-about-me"></textarea></div>
                 </div>
-                <div>
-                    Star Sign:
-                    <select id="select-star-sign" class="selectpicker">
-                        <option value="12">Nothing Selected</option>
-                        <option value="0">Aries</option>
-                        <option value="1">Taurus</option>
-                        <option value="2">Gemini</option>
-                        <option value="3">Cancer</option>
-                        <option value="4">Leo</option>
-                        <option value="5">Virgo</option>
-                        <option value="6">Libra</option>
-                        <option value="7">Scorpio</option>
-                        <option value="8">Sagittarius</option>
-                        <option value="9">Capricorn</option>
-                        <option value="10">Aquarius</option>
-                        <option value="11">Pisces</option>
-                    </select>
-                </div>
-                <div>Age: <input id="tb-age" type="text" /></div>
-                <div>Height: <input id="tb-height" type="text"/></div>
-                <div>Weight: <input id="tb-weight" type="text" /></div>
-                <div>Job Title: <input id="tb-job-title" type="text" /></div>
-                <div>Salary: <input id="tb-salary" type="text" /></div>
-                <div>Hobbies: <input id="tb-hobbies" type="text" /></div>
-                <div>About Me: <textarea id="ta-about-me"></textarea></div>
-
                 <button id="btn-save-changes">
                     Save Changes
                 </button>
             </div>
             <div class="tab-pane fade in" id="image-gallery">
                 <div id="links">
-                    <!-- Generate using handlebars -->
                     {{#each this.Images}}
                     <a href="{{Url}}" title="" data-gallery>
                         <img src="{{Url}}" alt="">
                     </a>
                     {{/each}}
-                    <!-- Upload files-->
                     <div>
                         <label for="fileUpload">Select File to Upload:</label>
                         <input id="fileUpload" type="file" />
                         <input id="btnUploadFile" type="button" value="Upload File" />
                     </div>
                 </div>
-                <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
                 <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
-                    <!-- The container for the modal slides -->
                     <div class="slides"></div>
-                    <!-- Controls for the borderless lightbox -->
                     <h3 class="title"></h3>
                     <a class="prev">‹</a>
                     <a class="next">›</a>
                     <a class="close">×</a>
                     <ol class="indicator"></ol>
-                    <!-- The modal dialog, which will be used to wrap the lightbox content -->
                     <div class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
@@ -147,6 +149,19 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="tab-pane fade in" id="comments">
+                <div class="tab-pane fade in" id="comments">
+                    <div id="comments-container">
+                        <ul>
+                            {{#each this.Posts}}
+                            <li>{{SenderName}} - {{CreatedOn}} - {{Content}}</li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                    <textarea id="ta-post-content"></textarea>
+                    <button id="btn-add-post">Add Comment</button>
                 </div>
             </div>
         </div>
