--- a/DateFirst.Web/Templates/home.html
+++ b/DateFirst.Web/Templates/home.html
@@ -124,7 +124,7 @@
             <div class="portlet portlet-default">
                 <div class="portlet-heading">
                     <div class="portlet-title">
-                        <h4><i class="fa fa-circle text-green"></i> Jane Smith</h4>
+                        <h4><i class="fa fa-circle text-green"></i>  DateFirst Chat </h4>
                     </div>
                     <div class="portlet-widgets">
                         <div class="btn-group">
@@ -154,70 +154,20 @@
                         <div class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <p class="text-center text-muted small">January 1, 2014 at 12:23 PM</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="media">
-                                        <!--<a class="pull-left" href="#">
-                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/1/" alt="">
-                                        </a>
-                                        <div class="media-body">
-                                            <h4 class="media-heading">
-                                                Jane Smith
-                                                <span class="small pull-right">12:23 PM</span>
-                                            </h4>
-                                            <p>Hi, I wanted to make sure you got the latest product report. Did Roddy get it to you?</p>
-                                        </div>-->
+                                    <div class="media" id="msg-content">
+                                        
                                     </div>
                                 </div>
                             </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="media">
-                                        <!--<a class="pull-left" href="#">
-                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
-                                        </a>
-                                        <div class="media-body">
-                                            <h4 class="media-heading">
-                                                John Smith
-                                                <span class="small pull-right">12:28 PM</span>
-                                            </h4>
-                                            <p>Yeah I did. Everything looks good.</p>
-                                            <p>Did you have an update on purchase order #302?</p>
-                                        </div>-->
-                                    </div>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="media">
-                                        <a class="pull-left" href="#">
-                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
-                                        </a>
-                                        <div class="media-body">
-                                            <h4 class="media-heading">
-                                                Jane Smith
-                                                <span class="small pull-right">12:39 PM</span>
-                                            </h4>
-                                            <p>No not yet, the transaction hasn't cleared yet. I will let you know as soon as everything goes through. Any idea where you want to get lunch today?</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <hr>
                         </div>
                     </div>
                     <div class="portlet-footer">
                         <form role="form">
                             <div class="form-group">
-                                <textarea class="form-control" placeholder="Enter message..."></textarea>
+                                <textarea class="form-control" id="ta-shoutbox-message" placeholder="Enter message..."></textarea>
                             </div>
                             <div class="form-group">
-                                <button type="button" class="btn btn-default pull-right">Send</button>
+                                <button type="button" class="btn btn-default pull-right" id="btn-send-message">Send</button>
                                 <div class="clearfix"></div>
                             </div>
                         </form>
