Fix scrollbar of chat to display always bottom when has overflow

--- a/DateFirst.Web/Templates/home.html
+++ b/DateFirst.Web/Templates/home.html
@@ -149,9 +149,9 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <div id="chat" class="panel-collapse collapse in">
+                <div class="panel-collapse collapse in">
                     <div>
-                        <div class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
+                        <div id="chat" class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="media" id="msg-content">
