--- a/DateFirst.Web/Templates/home.html
+++ b/DateFirst.Web/Templates/home.html
@@ -120,61 +120,54 @@
 </div>
 <!--ShoutBox Start-->
 <div class="container bootstrap snippet" id="shout-box">
-        <div class="col-md-4">
-            <div class="portlet portlet-default">
-                <div class="portlet-heading">
-                    <div class="portlet-title">
-                        <h4><i class="fa fa-circle text-green"></i>  DateFirst Chat </h4>
-                    </div>
-                    <div class="portlet-widgets">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-white dropdown-toggle btn-xs" data-toggle="dropdown">
-                                <i class="fa fa-circle text-green"></i> Status
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <a href="#"><i class="fa fa-circle text-green"></i> Online</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-circle text-orange"></i> Away</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-circle text-red"></i> Offline</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <span class="divider"></span>
-                        <a data-toggle="collapse" data-parent="#accordion" href="#chat"><i class="fa fa-chevron-down"></i></a>
-                    </div>
-                    <div class="clearfix"></div>
+    <div class="panel col-md-4">
+        <div class="portlet portlet-default">
+            <div class="portlet-heading">
+                <div class="portlet-title">
+                    <h3><!--<i class="fa fa-circle text-green"></i>-->  DateFirst Chat </h3>
                 </div>
-                <div class="panel-collapse collapse in">
-                    <div>
-                        <div id="chat" class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="media" id="msg-content">
-                                        
-                                    </div>
-                                </div>
-                            </div>
+                <div class="portlet-widgets">
+                    <!--<div class="btn-group">
+                        <button type="button" class="btn btn-white dropdown-toggle btn-xs" data-toggle="dropdown">
+                            <i class="fa fa-circle text-green"></i> Status
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="#"><i class="fa fa-circle text-green"></i> Online</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-circle text-orange"></i> Away</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-circle text-red"></i> Offline</a>
+                            </li>
+                        </ul>
+                    </div>-->
+                    <span class="divider"></span>
+                    <a data-toggle="collapse" data-parent="#accordion" href="#chat"><i class="fa fa-chevron-down"></i></a>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+            <div id="chat" class="panel-collapse collapse in">
+                <div id="chat-content">
+                    <div class="portlet-body chat-widget" id="msg-content" style="overflow-y: auto; width: auto;">
+
+                    </div>
+                </div>
+                <div class="portlet-footer">
+                    <form role="form">
+                        <div class="form-group">
+                            <textarea class="form-control" id="ta-shoutbox-message" placeholder="Enter message..."></textarea>
                         </div>
-                    </div>
-                    <div class="portlet-footer">
-                        <form role="form">
-                            <div class="form-group">
-                                <textarea class="form-control" id="ta-shoutbox-message" placeholder="Enter message..."></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button type="button" class="btn btn-default pull-right" id="btn-send-message">Send</button>
-                                <div class="clearfix"></div>
-                            </div>
-                        </form>
-                    </div>
+                        <div class="form-group">
+                            <a href="#" class="btn btn-user-profile" id="btn-send-message"><span class="glyphicon glyphicon-share-alt"></span></a>
+                            <div class="clearfix"></div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-</div>                
+    </div>
+</div>
 <!--ShoutBox End-->
-
