Fixed gallery UI.

--- a/DateFirst.Web/Templates/home.html
+++ b/DateFirst.Web/Templates/home.html
@@ -57,7 +57,10 @@
                     <option value="11">Pisces</option>
                 </select>
             </div>
-            <button id="btn-search" class="btn btn-user-profile">Search</button>
+            <a id="btn-search" class="btn btn-user-profile" title="Search">
+                <span class="glyphicon glyphicon-search"></span>
+            </a>
+            <!--<button id="btn-search" class="btn btn-user-profile">Search</button>-->
         </div>
     </div>
 </div>
@@ -161,7 +164,7 @@
                             <textarea class="form-control" id="ta-shoutbox-message" placeholder="Enter message..."></textarea>
                         </div>
                         <div class="form-group">
-                            <a href="#" class="btn btn-user-profile" id="btn-send-message"><span class="glyphicon glyphicon-share-alt"></span></a>
+                            <a href="#" class="btn btn-user-profile" id="btn-send-message" title="Send Message"><span class="glyphicon glyphicon-share-alt"></span></a>
                             <div class="clearfix"></div>
                         </div>
                     </form>
