--- a/DateFirst.Web/Templates/editProfile.html
+++ b/DateFirst.Web/Templates/editProfile.html
@@ -120,11 +120,16 @@
                     </span>
                     <input type="text" class="form-control" id="tb-selected-file">
 
-                    <!--<input id="fileUpload" class="btn btn-user-profile" type="file" />-->
+                    <!--<input id="fileUpload" class="btn btn-user-profile" type="file"/>-->
                     <a id="btnUploadFile" class="btn btn-user-profile" value="Upload File" title="Upload File">
                         <span class="glyphicon glyphicon-upload"></span>
                     </a>
-                    <!--<input id="btnUploadFile" class="btn-user-profile" type="button" value="Upload File" />-->
+                    <!--<input id="btnUploadFile" class="btn-user-profile" type="button" value="Upload File"/>-->
+                </div>
+                <div>
+                    <label for="file-Upload">Select File to Upload:</label>
+                    <input id="file-Upload" type="file" />
+                    <input id="btn-UploadFile" type="button" value="Upload File" />
                 </div>
                 <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
                     <div class="slides"></div>
