--- a/DateFirst.Web/Templates/home.html
+++ b/DateFirst.Web/Templates/home.html
@@ -75,7 +75,7 @@
                 {{#each this.males}}
                 <li>
                     <a href="#/users/{{Id}}">
-                        <img src="{{AvatarUrl}}" alt="Alternate Text" />
+                        <img src="{{AvatarUrl}}" alt="{{FirstName}}" />
                         <h4>{{FirstName}} {{LastName}}</h4>
                     </a>
                 </li>
@@ -93,7 +93,7 @@
                 {{#each this.females}}
                 <li>
                     <a href="#/users/{{Id}}">
-                        <img src={{AvatarUrl}} alt="Alternate Text" />
+                        <img src="{{AvatarUrl}}" alt="{{FirstName}}" />
                         <h4>{{FirstName}} {{LastName}}</h4>
                     </a>
                 </li>
@@ -111,7 +111,7 @@
                 {{#each this.newest}}
                 <li>
                     <a href="#/users/{{Id}}">
-                        <img src={{AvatarUrl}} alt="Alternate Text" />
+                        <img src="{{AvatarUrl}}" alt="{{FirstName}}" />
                         <h4>{{FirstName}} {{LastName}}</h4>
                     </a>
                 </li>
