--- a/DateFirst.Web/Templates/home.html
+++ b/DateFirst.Web/Templates/home.html
@@ -68,7 +68,7 @@
 <div id="users-container">
     <div class="panel col-md-8" id="best-male-daters-container">
         <div class="panel-heading">
-            <h3 class="panel-title">Best male users</h3>
+            <h3 class="panel-title">Top male users</h3>
         </div>
         <div class="panel-body">
             <ul>
@@ -86,7 +86,7 @@
     </div>
     <div class="panel col-md-8" id="best-female-daters-container">
         <div class="panel-heading">
-            <h3 class="panel-title">Best female users</h3>
+            <h3 class="panel-title">Top female users</h3>
         </div>
         <div class="panel-body">
             <ul>
