Fixed bug with undefined value of AboutMe

--- a/DateFirst.Web/Templates/userProfile.html
+++ b/DateFirst.Web/Templates/userProfile.html
@@ -51,7 +51,7 @@
                     <div>Job Title: {{this.AdditionalInfo.JobTitle}}</div>
                     <div>Salary: {{this.AdditionalInfo.Salary}}$</div>
                     <div id="about-me-header">About me: </div>
-                    <div id="ta-about-me-content">{{this.AdditionalInfo.AboutMe}}</div>
+                    <div id="ta-about-me">{{this.AdditionalInfo.AboutMe}}</div>
                 </div>
             </div>
             <div class="tab-pane fade in" id="image-gallery">
